--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "nconf": "*",
     "libxmljs": "*",
-    "dateformatjs": "*"
+    "dateformatjs": "*",
+    "inflect": "*"
   },
   "main": "eveapi",
   "repository":{
